--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body{
     height: 100%;
-    background-color: rgb(138, 88, 88);
+    background-color: rgb(35, 116, 221);
 }
 
 h1{
@@ -20,7 +20,7 @@ h1{
 
 .style{
    font-weight: 800;
-   color: blue;
+   color: rgb(12, 12, 112);
 }
 .serch_div{
     display: flex;
@@ -77,56 +77,13 @@ h1{
 
 }
 
-.container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin-top: 2rem;
-}
-
-.item{
-    padding: 0.5rem;
-    margin-bottom: 1.5rem;
-    border-bottom: 4px solid #fff;
-}
-
-.item_input{
-    background: none;
-    outline: none;
-    color: #fff;
-    border: none;
-    width: 350px;
-    font-size: 1.4rem;
-}
-
-.editButton{
-    font-size: 1.4rem;
-    margin: 0 0.75rem;
-    font-family: 'Hind' sans-serif;
-    background: none;
-    outline: none;
-    color: rgb(11, 44, 138);
-    border: none;
-    cursor: p;
-}
-.editButton:hover{
-    color: lime;
-
-}
-
-.removeButton{
-    font-size: 1.4rem;
-    margin: 0 0.75rem;
-    font-family: 'Hind' sans-serif;
-    background: none;
-    outline: none;
-    color: #E00;
-    border: none;
-}
-
 #todolist{
     color: black;
 }
 
+ul{
+   text-align: center;
+   padding-top: 3em;
+   /* margin-right: 25em; */
+   font-size:  30px ;
+}
